# now-you-will-see

./: .env.example  .env.texgraph  .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  Makefile  ONTOLOGY.md  PERSONA.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  workspace.example.yaml
backend/api/: requirements.txt
backend/core/: __init__.py  audit.py  cli.py  compiler.py  config.py  coverage.py  metadata.py  models.py  modules.py  pagemap.py  parser.py  plan.py  promotions.py  renderer.py  scan.py  utils.py  workspace.py
backend/runtime/: __init__.py  gated_agent.py  handoff.py  runtime.py  tools.py
backend/tests/: test_audit.py  test_audit_orchestrator.py  test_coverage.py  test_models.py  test_module_migration.py  test_module_promotions.py  test_module_registry.py  test_pagemap.py  test_proof_build_paths.py  test_reading_sections.py  test_render_escaping.py  test_runtime.py  test_runtime_service.py  test_station_e2e.py
covers/: AGENTS.md
final/: AGENTS.md
framework/: PERSONA.md  README.md  pipeline.yaml
front-end/: AGENTS.md
frontend/: vite.config.ts
frontend/src/: App.tsx  index.css
ingest/: AGENTS.md  RUNBOOK.md
machinery/: AGENTS.md  models.yaml
machinery/docs/: APP_PLAN.md  CLAUDE.md  DAG_PIPELINE.md  DATA_DICTIONARY.md  FRONTEND_NEEDS.md  HANDOFF.md  MODULE_REFACTOR_STATUS.md  ONTOLOGY.md  PROCEDURES.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  REPO_STRUCTURE_PLAN.md  STUDIO_FRONTEND.md  STUDIO_MODULES.md  TOOL_PROPOSALS.md
machinery/studio/: requirements-studio.txt
machinery/tests/: test_audit.py  test_audit_orchestrator.py  test_coverage.py  test_models.py  test_module_migration.py  test_module_promotions.py  test_module_registry.py  test_pagemap.py  test_proof_build_paths.py  test_reading_sections.py  test_render_escaping.py
machinery/tools/: README.md  add_source_field.py  build_dataset.py  harvest_sessions.py  ontology_check.py  rename_project_paths.py  scaffold_typeset_poems.py  strip_note_prefix.py  task_logger.py
proof/: AGENTS.md  RUNBOOK.md
tools/: build_dataset.py  harvest_sessions.py  ontology_check.py  rename_project_paths.py  scaffold_typeset_poems.py  skill_index.py  station_e2e.py  strip_note_prefix.py  task_logger.py
transcribe/: AGENTS.md  RUNBOOK.md
typeset/: AGENTS.md
(+1684 files in other folders)
