[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "texgraph"
version = "0.1.0"
description = "A Markdown-to-LuaLaTeX-to-PDFx editor and compiler for poetry collections"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Texgraph Contributors" },
]
keywords = ["latex", "lualatex", "markdown", "poetry", "pdf", "publishing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Markup :: LaTeX",
]

dependencies = [
  "python-frontmatter>=1.1.0",
  "mistune>=3.0.2",
  "jinja2>=3.1.4",
  "pyyaml>=6.0.2",
  "typer>=0.12.5",
  "rich>=13.7.1",
  "watchdog>=4.0.1",
  "python-dotenv>=1.0.1",
  "pydantic>=2.0",
]

[project.optional-dependencies]
studio = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic-settings>=2.2.0",
  "aiofiles>=23.2.1",
  "python-multipart>=0.0.9",
  "watchfiles>=0.21.0",
  "anthropic>=0.28.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "black>=24.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[project.scripts]
texgraph = "backend.core.cli:app"

[project.urls]
Homepage = "https://github.com/texgraph/texgraph"
Repository = "https://github.com/texgraph/texgraph"
Issues = "https://github.com/texgraph/texgraph/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.setuptools.package-data]
"backend.core" = ["templates/*.tex", "templates/*.jinja2", "py.typed"]

# --- Black ---
[tool.black]
line-length = 100
target-version = ["py311", "py312"]

# --- Ruff ---
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

# --- Mypy ---
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "--tb=short -q"
